--- a/utilpyqt/env.yml
+++ b/utilpyqt/env.yml
@@ -2,13 +2,16 @@
 
 name: geodpy_env
 channels:
-- conda-forge
-- defaults
+ - conda-forge
+ - defaults
 
-dependancies:
-- matplotlib==3.5.3
-- numpy==1.21.6
-- folium==0.14.0
-- obspy==1.3.1
-- PyQt5==5.15.8
-- pytz
+dependencies:
+ - python==3.10 
+ - matplotlib==3.5.3
+ - numpy==1.21.6
+ - folium==0.14.0
+ - obspy==1.3.1
+ - pip
+ - pip: 
+   - pyqt5==5.15.8
+   - pytz
